logs/django-simplegallery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_simplegallery-0.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplegallery'...
Listing './lib/python3.5/site-packages/simplegallery/migrations'...
Compiling './lib/python3.5/site-packages/simplegallery/models.py'...
***   File "./lib/python3.5/site-packages/simplegallery/models.py", line 175
    print "Please sync me", instance, sender
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
Listing './simplegallery'...
Listing './simplegallery/media'...
Listing './simplegallery/media/css'...
Listing './simplegallery/media/js'...
Listing './simplegallery/templates'...
Listing './simplegallery/templates/simplegallery'...
